[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kodosumi-examples"
version = "0.9.0"
description = "Example packages for kodosumi"

dependencies = [
    "kodosumi @ git+https://github.com/masumi-network/kodosumi.git@dev",
    "tiktoken>=0.8",
    "crewai>=0.1.24",
    "crewai-tools",
    "lorem-text",
]

requires-python = ">=3.8"

[[project.authors]]
name = "Michael Rau"
email = "m.rau@house-of-communication.com"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["kodosumi.examples*"]
namespaces = true
